# mangosbot-bots

./: CMakeLists.txt
src/: AiFactory.cpp  AiFactory.h  CMakeLists.txt  ChatFilter.cpp  ChatFilter.h  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  FleeManager.h  GuildTaskMgr.cpp  GuildTaskMgr.h  Helpers.cpp  Helpers.h  LazyCalculatedValue.h  LootObjectStack.cpp  LootObjectStack.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIAware.cpp  PlayerbotAIAware.h  PlayerbotAIBase.cpp  PlayerbotAIBase.h  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotCommandServer.h  PlayerbotDbStore.cpp  PlayerbotDbStore.h  PlayerbotFactory.cpp  PlayerbotFactory.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotSecurity.h  PlayerbotTextMgr.cpp  PlayerbotTextMgr.h  Playerbots.cpp  RandomItemMgr.cpp  (+18 more)
src/PrecompiledHeaders/: playerbotsPCH.h
src/database/: PlayerbotDatabase.cpp  PlayerbotDatabase.h
src/strategy/: Action.cpp  Action.h  AiObject.cpp  AiObject.h  AiObjectContext.cpp  AiObjectContext.h  CustomStrategy.cpp  CustomStrategy.h  Engine.cpp  Engine.h  Event.cpp  Event.h  ExternalEventHelper.cpp  ExternalEventHelper.h  ItemVisitors.cpp  ItemVisitors.h  Multiplier.h  NamedObjectContext.h  PassiveMultiplier.cpp  PassiveMultiplier.h  Queue.cpp  Queue.h  Strategy.cpp  Strategy.h  StrategyContext.h  Trigger.cpp  Trigger.h  Value.cpp  Value.h
src/strategy/actions/: AcceptBattlegroundInvitationAction.cpp  AcceptBattlegroundInvitationAction.h  AcceptDuelAction.cpp  AcceptDuelAction.h  ActionContext.h  (+230 more)
(+459 files in other folders)
